# reseda

./: .gitattributes  .gitignore  README.md  electron-builder.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml  pr_build.yml
app/: background.js  background.js.map  preload.js
main/: background.ts  preload.ts  renderer.d.ts
main/helpers/: create-window.ts
renderer/: client.ts  reseda-api.ts  tsconfig.json  wireguard_tooling.js
renderer/components/: auth.tsx  button.tsx  home.tsx  icons.tsx  platform_controls.tsx  tabview.tsx  useDate.tsx
renderer/components/un-ui/: UnUI.module.css  button.tsx  form.tsx  input.tsx  input_field.tsx  loader.tsx
renderer/lib/: prisma.ts
renderer/pages/: _app.tsx  home.tsx  login.tsx
renderer/pages/api/: connect.ts  disconnect.ts  getUser.ts
renderer/prisma/: schema.prisma
renderer/styles/: Home.module.css  globals.css  twemoji.css
resources/: icon.psd  icon_small.icns  icon_small.psd
src/: reseda-api.ts  reseda.ts  reseda.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/tunnel/: mod.rs  peer.rs  tunnel.rs
src/components/: auth.tsx  button.tsx  framer_constants.ts  gradient.js  home.tsx  importer.tsx  platform_controls.tsx  reseda.tsx  tabview.tsx  theme.ts  usage_graph.tsx  useDate.tsx
src/components/un-ui/: UnUI.module.css  dropdown.tsx  loader.tsx
src/lib/: state.ts
src/lib/wg-tools/src/: WgConfig.ts  index.ts
src/lib/wg-tools/src/utils/: configParser.ts  exec.ts  getConfigFromFile.ts  makeSureDirExists.ts  makeSureFileExists.ts  writeConfig.ts
src/pages/: _____index.tsx  _app.tsx  app.tsx  index.tsx  login.tsx
src/pages/api/auth/: [...nextauth].ts  signup.ts
src/prisma/: schema.prisma
src/styles/: Home.module.css  app.module.css  globals.css
wireguard/: go.sum  main.go
