[package]
name = "app"
version = "0.2.4"
description = "Reseda"
authors = ["bennjii"]
license = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"
include = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }
includedir_codegen = "0.6.0"

[dependencies]
serde_json = "1.0"  
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
runas = "0.2.1"
phf = "0.11.1"
futures = "0.3"
includedir = "0.6.0"
base64 = "0.21.0"
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
x25519-dalek = "2.0.0-pre.1"
boringtun = { version = "0.5.2", features = [] }
zeroize = "1.5.7"
onetun = "0.3.4"
anyhow = "1.0.68"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
